--- a/Vistas/Inicio.form
+++ b/Vistas/Inicio.form
@@ -363,7 +363,7 @@
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
           <SubComponents>
-            <Component class="javax.swing.JList" name="jListArhivosAbiertos">
+            <Component class="javax.swing.JList" name="jListArchivosAbiertos">
               <Properties>
                 <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
                   <StringArray count="5">
